Prepare for publishing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "macro-map"
 version = "0.1.0"
 edition = "2021"
+description = "Closure-less `Result::map_err` and `Option::ok_or_else`."
+license = "MIT"
+keywords = ["macros", "map", "error-handling"]
 
 [dependencies]
 
